Update project as per the review
Update project as per the review

--- a/dog-project/dog_app.html
+++ b/dog-project/dog_app.html
@@ -17378,6 +17378,12 @@ To9xAAAAAElFTkSuQmCC
 <li>The dog breeds were predicted accurately, but my cat imges were not tagged with any label. :( </li>
 <li>Apparently I resemble two different type of dog based on the angle of the picture.</li>
 </ul>
+<p><strong> Following are the points for improvement of the algorithm</strong></p>
+<ul>
+<li>The algorithm might perform better if it was also trained on cat images</li>
+<li>Accuracy can be improved if more data is collected and used for training</li>
+<li>We can also look at image augmentation and increasing the depth of the neural network to improve accuracy.</li>
+</ul>
 
 </div>
 </div>
